--- a/tm351-notebook/Dockerfile
+++ b/tm351-notebook/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y libproj-dev \
   gdal-bin \
   libgdal-dev \
   libicu-dev \
+  tree \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 #COPY ./wheelhouse/ ./wheelhouse/
