--- a/.github/workflows/buildx-pandas.yml
+++ b/.github/workflows/buildx-pandas.yml
@@ -32,25 +32,55 @@ jobs:
 
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
-      - name: Run Buildx
+      - name: Run Buildx linux/amd64
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64  \
+            --platform linux/amd64 \
             -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
             ./pandas-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Reusing the cache, push the images
-      - name: Push to Dockerhub
+      - name: Push linux/amd64
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64  \
+            --platform linux/amd64 \
             -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
             ./pandas-notebook \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64  \
+            --platform linux/amd64 \
             -t ouvocl/jupyter-pandas:latest \
+            ./pandas-notebook \
+            --push
+          docker rmi -f ouvocl/jupyter-pandas:${GITHUB_SHA::7}
+          docker rmi -f ouvocl/jupyter-pandas:latest
+      - name: Build and push linux/arm64
+        run: |
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
+            ./pandas-notebook \
+            --push
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ouvocl/jupyter-pandas:latest \
+            ./pandas-notebook \
+            --push
+          docker rmi -f ouvocl/jupyter-pandas:${GITHUB_SHA::7}
+          docker rmi -f ouvocl/jupyter-pandas:latest
+      - name: Build and push linux/arm7
+        run: |
+          docker buildx build \
+            --platform linux/arm/v7 \
+            -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
+             -f ./pandas-notebook/Dockerfile.arm32 \
+            ./pandas-notebook \
+            --push
+          docker buildx build \
+            --platform linux/arm/v7 \
+            -t ouvocl/jupyter-pandas:latest \
+            -f ./pandas-notebook/Dockerfile.arm32 \
             ./pandas-notebook \
             --push
