--- a/.github/workflows/buildx-vce-pandas.yml
+++ b/.github/workflows/buildx-vce-pandas.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run Buildx 
         run: |
           docker buildx build \
-            linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
             --build-arg BASE_IMAGE=ouvocl/vce-notebook \
             ./pandas-notebook
